set width for qty button to avoid awkward stretched button

--- a/wpsc-components/theme-engine-v2/theming/assets/css/wpsc-responsive.css
+++ b/wpsc-components/theme-engine-v2/theming/assets/css/wpsc-responsive.css
@@ -786,6 +786,7 @@ Product Forms
 	display: -webkit-flex;
 	display: flex;
 	border: 1px solid #ccc;
+	width: 115px;
 }
 
 .wpsc-field-quantity .wpsc-controls input[type="text"] {
